refactor: JDK 버전 17로 하향 및 JDK 버전 차이로 인한 메서드 교체